fix spacing in my work tablet

--- a/src/index.css
+++ b/src/index.css
@@ -281,6 +281,7 @@ footer {
   .about-me {
     background-color: white;
     margin: 10em;
+    margin-bottom: 6em;
     padding: 0;
     font-size: 12px;
     flex-direction: row;
@@ -336,7 +337,7 @@ footer {
   }
 
   .my-work {
-    margin-top: 4rem;
+    margin-top: 0;
     width: 80vw;
   }
 
@@ -347,6 +348,7 @@ footer {
 
   .proj {
     width: calc(40vw - 1rem);
+    margin-bottom: 3rem;
   }
 
   .projects-container {
